prevent nav from squashing

--- a/style/layout.css
+++ b/style/layout.css
@@ -11,7 +11,7 @@ body {
 	height: 100vh;
 
 	display: grid;
-	grid-template-rows: 1fr 11fr;
+	grid-template-rows: 4lh 1fr;
 	grid-template-columns: 1fr minmax(350px, 700px) 1fr;
 }
 
